deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rfpop-deployment
  namespace: user-vgraillat
  labels:
    app: rfpop-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rfpop-app
  template:
    metadata:
      labels:
        app: rfpop-app
    spec:
      containers:
        - name: rfpop-app
          image: audricms/r-fpop-change-points-detection:v1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
