deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rfpop-service
  namespace: user-vgraillat
spec:
  selector:
    app: rfpop-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
