deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rfpop-ingress
  namespace: user-vgraillat
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "rfpop-service"
spec:
  ingressClassName: onyxia
  tls:
    - hosts:
        - rfpop-vgraillat.user.lab.sspcloud.fr
  rules:
    - host: rfpop-vgraillat.user.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rfpop-service
                port:
                  number: 80
